syntax = "proto2";

package error;

enum ErrCode {
  Unknown = 0;
  GroupNotFound = 1;
  UserNotFound = 2;
  ExecWait = 3;
  NoPID = 4;
}

message NetErr {
  optional ErrCode code = 1;
  optional string msg = 2;
}

message NetOk {}
